Refactor from code generation to runtime engine architecture (0.1.0)
Replace Velocity template-based code generation with a sealed-interface
runtime engine pattern. EngineBuilder.build() now returns a live
FindCharsEngine instance directly instead of generating source files.
Remove all templates, Target, Operation, and generated file artifacts.
Add GitHub Actions CI workflow, update README with new API examples
and badges, and bump version to 0.1.0.